2003-03-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Various: Support for 'static' (persistent) usecode variables,
	both local and global.
	* usecode/compiler/ucparse.yy:  Can now use '.' instead of '->'.

2003-03-06  Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* docs/usecode_bugs.txt: added a file for people interested in fixing some usecode bugs

2003-03-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: bookmark doesn't stop clicking on buttons

2003-03-05  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/objbrowse.h (public): Get_selected() now returns correct
	index when scrolled.  Fixed 'remove' bug in EStudio groups.

2003-03-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fixed --buildmap
	* */.cvsignore: added some misc files to .cvsignore
	* sigame.cc, bggame.cc: use unicode translation for avatar name input

2003-03-04  Jeff Freedman  <jeff@amy.nerble.net>

	* imagewin/scale.cc,etc.: Added Andrea Mazzoleni "Scale2X" scaler.

2003-02-28  Jeff Freedman  <jeff@amy.nerble.net>

	* gamerend.cc (using): Draw modal gumps after text.

	* combat.cc (Combat): Only play victory music when there are no
	more enemies around.  Also, play one of two pieces.

2003-02-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conversation.cc: don't use BG multiracial hack if not in BG

2003-02-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: renamed configure.in to configure.ac; updated for
	autoconf 2.53+; removed acconfig.h
	* audio/Makefile.am: missing header from sources

2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.cc: output HAVE_OPENGL setting
	* imagewin.h: disable OpenGL in the video options if not HAVE_OPENGL

2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* forked_player.cc: don't go into infinite loop when player fails
	* shapeid.*: minor cleanup