@@ -1676,9 +1676,15 @@ void BuildGameMap()
 		}
 
 		h = w = c_tilesize * c_tiles_per_schunk; sc = 1, sclr = Image_window::point;
-
 		Image_window8::set_gamma(1, 1, 1);
+
+		string	fullscreenstr;		// Check config. for fullscreen mode.
+		config->value("config/video/fullscreen",fullscreenstr,"no");
+		// set windowed mode
+		config->set("config/video/fullscreen","no",false);
 		gwin = new Game_window(w, h, sc, sclr);
+		// restore original fullscreen setting
+		config->set("config/video/fullscreen",fullscreenstr,true);
 		Audio::Init();
 		current_res = find_resolution(w, h, sc);
 		Game::create_game(gametype);
