@@ -1,3 +1,6 @@
+2003-03-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc: ignore fullscreen mode for --buildmap (in a hackish way)
+
 2003-03-10  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Various: Support for 'static' (persistent) usecode variables,
